<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/background"
    android:background="@color/colorPrimary"
    tools:context="example.thuhang.lsheev112.SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/tvlshee"
        android:textSize="30sp"
        android:textColor="@color/colorLshee"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/linearLayout"
        android:paddingTop="60dp"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            float:fletTextAppearance="@style/floatlabelededittext">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUSERNAME"
            android:singleLine="true"
            android:maxLength="20"
            android:hint="@string/username" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            float:fletTextAppearance="@style/floatlabelededittext">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editEMAIL"
            android:maxLines="1"
            android:maxLength="45"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            float:fletTextAppearance="@style/floatlabelededittext">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPHONE"
            android:maxLines="1"
            android:maxLength="45"
            android:hint="@string/so_dien_thoai"
            android:inputType="phone"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            float:fletTextAppearance="@style/floatlabelededittext">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPASSWORD"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/password"
            android:inputType="textPassword" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            float:fletTextAppearance="@style/floatlabelededittext">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCONFIRMPASSWORD"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <Button android:layout_height="50dp"
            android:layout_width="100dp"
            android:text="@string/sign_up"
            android:id="@+id/buttonSIGNUP"
            android:textColor="#178d97"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            android:id="@+id/ButtonLOGIN"
            android:text="@string/you_already_have_an_account"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>
